# pointsav-monorepo

./: .gitattributes  .gitignore  .mcp.json  ARCHITECTURE.md  BOOTIA32.EFI  BOOTX64.EFI  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DATA-MANIFEST.md  DATA-license-receipt-schema-v1.json  GEMINI.md  GLOSSARY.md  INVENTIONS.md  ISO3_CODES.txt  IT SUPPORT_MCorp_2026_01_06_White Paper_GIS_Location Intelligence_FIN.docx  IT SUPPORT_MCorp_2026_01_06_White Paper_GIS_Location Intelligence_Notes_FIN.docx  LICENCE_Research_Report.md  LICENSE  LICENSE.md  MEMORY.md  MOON-01.yaml  NEXT.md  PPN-01.yaml  README-pointsav-monorepo.md  README.es.md  README.md  SYS-ARCH-01.yaml  SYS-BOOT-01.yaml  TRADEMARK.md  USER_GUIDE.md  USER_GUIDE_2026-03-30_14-31-28.md  USER_GUIDE_2026-03-30_V2.md  USER_GUIDE_2026-04-18_V3.md  WELCOME-jennifer.md  build-settlements.py  colocation-report-2026-05-23.html  grub.cfg  (+9 more)
app-console-content/: Cargo.toml  README.es.md  README.md  view-content.html
app-console-content/scripts/: pointsav-surveyor.sh  surveyor.py
app-console-content/src/: cartridge.html  cartridge.rs  db.rs  draft.rs  draft_save.rs  drafts_out.rs  lib.rs  main.rs  pdf.rs  proofreader.rs  search.rs  session.rs
app-console-email/: Cargo.toml  view-email.html
app-console-email/src/: cartridge.html  cartridge.rs  lib.rs
app-console-input/: Cargo.toml  README.es.md  README.md  view-input.html
app-console-input/src/: audit.rs  cartridge.html  cartridge.rs  ingest.rs  lib.rs
app-console-keys/: Cargo.toml  README.md
app-console-keys/src/: cartridge.rs  chassis.rs  colors.rs  config.rs  fkey.rs  glyphs.rs  index.html  input_bytes.rs  lib.rs  motion.rs  pairing.rs  qr.rs  session.rs  tls.rs
app-console-people/: Cargo.toml  README.md  view-people.html
app-console-people/src/: cartridge.html  cartridge.rs  lib.rs
app-console-search/: Cargo.toml
app-console-search/src/: cartridge.rs
app-console-slm/: Cargo.toml  README.es.md  README.md
app-console-slm/src/: cartridge.rs  health.rs  lib.rs  main.rs
app-console-system/: Cargo.toml  README.es.md  README.md
app-console-system/src/: cartridge.rs  ledger_vis.rs  lib.rs  peers.rs  pending.rs
app-mediakit-knowledge/: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  NEXT.md  README.es.md  README.md  build.rs  openapi.yaml
app-mediakit-knowledge/config/: corporate.toml  documentation.toml  projects.toml
app-mediakit-knowledge/docs/: BP1-DECISION-PACKET.md  HOMEPAGE-IMPL-PLAN.md  INVENTIONS.md  PHASE-2-PLAN.md  PHASE-4-PLAN.md  STEP-7-COLLAB-SMOKE.md  UX-DESIGN.md
app-mediakit-knowledge/scripts/: build-vendor-js.sh  dtcg-bundle.json  dtcg-to-css.py  migrate_corpus.py  responsive-check.js  stage6-gate.sh  wikilink-audit.py
app-mediakit-knowledge/src/: activitypub.rs  annotations.rs  assets.rs  auth.rs  blueprints.rs  check.rs  citations.rs  claim.rs  collab.rs  config.rs  edit.rs  error.rs  feeds.rs  git.rs  git_protocol.rs  glossary.rs  history.rs  jsonld.rs  lib.rs  links.rs  main.rs  mcp.rs  mounts.rs  pending.rs  render.rs  search.rs  server.rs  squiggle.rs  state.rs  users.rs  walker.rs
app-mediakit-knowledge/static/: editor.js  saa-init.js  slide-deck.js  style.css  theme-woodfine.css  toc-persistence.js  tokens-woodfine.css  tokens.css  wiki.js
app-mediakit-knowledge/templates/: article.html  category.html  editor.html  search.html
app-mediakit-knowledge/tests/: auth_test.rs  citations_test.rs  collab_test.rs  crawler_test.rs  doorman_test.rs  edit_test.rs  feeds_test.rs  git_protocol_test.rs  git_test.rs  history_test.rs  home_test.rs  infobox_test.rs  journal_test.rs  jsonld_test.rs  links_test.rs  mcp_test.rs  mobile_test.rs  openapi_test.rs  pending_test.rs  search_test.rs  slug_test.rs  squiggle_test.rs
app-mediakit-knowledge/vendor-js/: README.md  build.mjs  entry-collab.js  entry.js  package.json
app-mediakit-marketing/: Cargo.toml  README.es.md  README.md
app-mediakit-marketing/src/: config.rs  content.rs  lib.rs  main.rs  mcp.rs  pending.rs  server.rs
app-mediakit-marketing/tests/: routes.rs
app-mediakit-shell/: Cargo.toml  README.es.md  README.md
app-mediakit-shell/src/: lib.rs  page.rs  render.rs  section.rs  shell.rs  tokens.rs
app-mediakit-shell/static/: sections.css  shell.css  tokens.css
app-mediakit-telemetry/: CHANGELOG.md  Cargo.toml  README.es.md  README.md
app-mediakit-telemetry/assets/: README.md
app-mediakit-telemetry/scripts/: 0400-telemetry-reset.sh  generic-omni-matrix-engine.py  generic-tool-ledger-salvage.py  generic-tool-telemetry-pull.sh  generic-tool-telemetry-synthesizer.sh
app-mediakit-telemetry/src/: main.rs
app-mediakit-telemetry/tools/: tool-telemetry-pull.template.sh  tool-telemetry-synthesizer.template.sh
app-network-admin/: Cargo.toml  README.es.md  README.md
app-network-admin/src/: fleet_watch.rs  main.rs
app-orchestration-bim/: CLAUDE.md  Cargo.toml
app-orchestration-bim/src/: main.rs
app-orchestration-command/: Cargo.toml
app-orchestration-graph/: Cargo.toml  README.es.md  README.md
app-orchestration-slm/: CLAUDE.md  Cargo.toml  README.es.md  README.md
app-privategit-bim/: Cargo.toml
app-privategit-design/: Cargo.toml
app-privategit-marketplace/: Cargo.toml  README.es.md  README.md
app-privategit-source/: Cargo.toml
app-privategit-workbench/: Cargo.toml  LICENSE  NOTICE  README.es.md  README.md  config.toml
app-workplace-http-prototype/: CLAUDE.md  Cargo.toml  NEXT.md  README.es.md  README.md  config.toml
console-core/: Cargo.toml
moonshot-toolkit/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  NEXT.md  README.es.md  README.md  build-totebox.sh
os-console/: Cargo.toml  README.es.md  README.md  config.example.toml  index.html
os-infrastructure/: .gitignore  CLAUDE.md  Cargo.toml  Makefile  NEXT.md  README.es.md  README.md  forge_iso.sh  linker.ld
os-network-admin/: .gitignore  CLAUDE.md  Cargo.toml  NEXT.md  README.es.md  README.md  linker.ld  mesh_status.sh
service-content/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.es.md  README.md
(+2950 files in other folders)
