[workspace]
resolver = "2"
# Standalone workspaces (own [workspace] + Cargo.lock).
# Must be excluded so path deps from workspace members do not trigger
# "multiple workspace roots" errors.
exclude = [
    "system-core",
    "system-ledger",
    "system-ledger-proto",
    "system-ledger-pd",   # seL4 bare-metal PD; own workspace root
]
members = [
    "service-people",
    "service-content",
    "app-console-content",
    "tool-acs-miner",
    "app-console-input",
    "system-gateway-mba",
    "service-fs",
    "system-security",
    "xtask",
    "app-console-keys",
    "app-console-system",
    "app-console-email",
    "app-console-slm",
    "os-console",
    "app-privategit-marketplace",
    "app-privategit-source",
    "os-privategit",
    "tool-wallet",
    "app-privategit-workbench",
    "tool-proforma-engine",
    "app-orchestration-bim",
    "tool-keyplan",
    # PPN focus crates
    "system-substrate-broadcom",
    "system-network-interface",
    "os-network-admin",
    "app-network-admin",
    # PPN node-join ceremony
    "system-pairing-codes",
    "service-ppn-pairing",
    # PPN resource pooling
    "system-vm-fleet-types",
    "service-vm-fleet",
    "service-vm-host",
    # Knowledge wiki engine
    "app-mediakit-knowledge",
    # Design system browser (port 9094)
    "app-privategit-design",
    # Capability Ledger transport shell (compat bottom: NetBSD + seL4)
    "system-ledger-server",
    # NetBSD 10.1 compat-bottom substrate shim
    "system-substrate-netbsd",
    # Guest OS image builders (NetBSD 10.1 compat bottom)
    "os-totebox",
    # Transport-agnostic capability invocation substrate (CapabilityInvoker trait)
    "system-substrate",
]

[profile.dev]
panic = "abort"     # Required for bare-metal evaluation

[profile.release]
opt-level = "z"     # Optimize for minimum binary size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for maximum LTO benefit
panic = "abort"     # Strip panic unwinding overhead
strip = true        # Strip debug symbols from output binary

# app-mediakit-knowledge is a runtime HTTP server — use speed-optimised profile,
# not the bare-metal size-optimised defaults. Preserves the standalone Cargo.toml
# [profile.release] settings (moved here on workspace integration 2026-05-31).
[profile.release.package.app-mediakit-knowledge]
opt-level = 3
strip = "symbols"

# Patch tantivy-common to replace a blanket From<B> impl that conflicts with
# time >= 0.3.36 under rustc 1.85+ coherence checks (E0119). The blanket impl
# is replaced with explicit impls for Vec<u8> and &'static [u8], which cover
# all call sites in tantivy 0.24.x. Remove this patch once tantivy-common
# publishes a version with the upstream fix.
[patch.crates-io]
tantivy-common = { path = "vendor-tantivy-common" }
tantivy-columnar = { path = "vendor-tantivy-columnar" }
tantivy = { path = "vendor-tantivy" }
