[workspace]
resolver = "2"
members = [
    "service-people",
    "service-content",
    "app-console-content",
    "tool-acs-miner",
    "tool-buildingwidth",
    "tool-floorplate",
    "app-console-input",
    "system-gateway-mba",
    "service-fs",
    "system-security",
    "xtask",
    "console-core",
    "app-console-keys",
    "app-console-system",
    "app-console-email",
    "app-console-slm",
    "app-console-people",
    "os-console",
    "app-privategit-marketplace",
    "app-privategit-source",
    "os-privategit",
    "tool-wallet",
    "app-privategit-workbench",
    "tool-proforma-engine",
    "app-orchestration-bim",
    "tool-keyplan",
    # PPN focus crates
    "system-substrate-broadcom",
    "system-network-interface",
    "os-network-admin",
    "app-network-admin",
    # PPN node-join ceremony
    "system-pairing-codes",
    "service-ppn-pairing",
    # PPN resource pooling
    "system-vm-fleet-types",
    "service-vm-fleet",
    "service-vm-host",
    "service-vm-tenant",
    # Knowledge wiki engine
    "app-mediakit-knowledge",
    # Jennifer ingest pipeline
    "service-input",
    "service-extraction",
    # BIM Object schema vault + MCP server
    "app-privategit-bim",
    # Marketing platform: shared chrome chassis + the marketing app
    "app-mediakit-shell",
    "app-mediakit-marketing",
    # Design system browser (port 9094)
    "app-privategit-design",
    # Sovereign replacement stubs (wired into app-privategit-design)
    "moonshot-fs-watch",
    "moonshot-index",
]

[profile.dev]
panic = "abort"     # Required for bare-metal evaluation

[profile.release]
opt-level = "z"     # Optimize for minimum binary size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for maximum LTO benefit
panic = "abort"     # Strip panic unwinding overhead
strip = true        # Strip debug symbols from output binary

# app-mediakit-knowledge is a runtime HTTP server — use speed-optimised profile,
# not the bare-metal size-optimised defaults. Preserves the standalone Cargo.toml
# [profile.release] settings (moved here on workspace integration 2026-05-31).
[profile.release.package.app-mediakit-knowledge]
opt-level = 3
strip = "symbols"

# app-mediakit-marketing is a runtime HTTP server — speed-optimised, like the
# knowledge engine, not the bare-metal size-optimised workspace default.
[profile.release.package.app-mediakit-marketing]
opt-level = 3
strip = "symbols"

[patch.crates-io]
tantivy-common = { path = "vendor-tantivy-common" }
tantivy-columnar = { path = "vendor-tantivy-columnar" }
tantivy = { path = "vendor-tantivy" }
