[package]
name = "app-console-content"
version = "0.1.0"
edition = "2021"
description = "Proofreader + content-draft TUI — os-console F4 Content Cartridge (lib)"

[dependencies]
app-console-keys = { path = "../app-console-keys" }
system-gateway-mba = { path = "../system-gateway-mba" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-textarea = "0.7"
similar = "2.5"
