[package]
name = "app-console-content"
version = "0.1.0"
edition = "2021"
description = "Proofreader + content-draft TUI — os-console F4 Content Cartridge (lib)"

[dependencies]
app-console-keys = { path = "../app-console-keys" }
system-gateway-mba = { path = "../system-gateway-mba" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-textarea = "0.7"
similar = "2.5"
pdfium-render = "0.8"
ratatui-image = { version = "9", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
