[package]
name = "app-console-email"
version = "0.1.0"
edition = "2021"
description = "os-console F3 Email Cartridge — inbox list, message read, compose"

[lib]
name = "app_console_email"
path = "src/lib.rs"

[dependencies]
app-console-keys = { path = "../app-console-keys" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
