[package]
name = "app-console-input"
version = "0.1.0"
edition = "2021"
description = "os-console F12 Input Machine cartridge (The Anchor — SYS-ADR-10)"

[dependencies]
app-console-keys = { path = "../app-console-keys" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
