[package]
name = "app-console-keys"
version = "0.1.0"
edition = "2021"
description = "os-console base chassis — Cartridge trait, F-key navigation, tab strip, status bar"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
qrcode = "0.14"
image = { version = "0.25", default-features = false }
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }
