[package]
name = "app-console-people"
version = "0.1.0"
edition = "2021"
description = "os-console F2 People Cartridge — contact list with CRUD stubs"

[lib]
name = "app_console_people"
path = "src/lib.rs"

[dependencies]
app-console-keys = { path = "../app-console-keys" }
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde_json = "1.0"
