[package]
name = "app-console-search"
version = "0.1.0"
edition = "2021"
description = "os-console F5 Search cartridge — capability-scoped full-text search"

[lib]
name = "app_console_search"
path = "src/lib.rs"

[dependencies]
app-console-keys = { path = "../app-console-keys" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
