[package]
name = "app-console-slm"
version = "0.1.0"
edition = "2021"
description = "os-console F9 SLM Cartridge — Doorman health, tier routing, entity count dashboard"

[lib]
name = "app_console_slm"
path = "src/lib.rs"

[dependencies]
app-console-keys = { path = "../app-console-keys" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
