# Standalone workspace marker. The parent monorepo Cargo.toml declares
# only 8 of ~70 crates as workspace members (Layer 1 audit finding,
# cleanup-log.md 2026-04-18); until that's resolved at repo level by a
# Root Claude, this crate operates as its own workspace boundary.
[workspace]

[package]
name = "app-mediakit-knowledge"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "PointSav knowledge platform — wiki engine. Single-binary, flat-file Markdown source-of-truth, Git-versioned, AI-optional."
license = "Apache-2.0"
publish = false

[[bin]]
name = "app-mediakit-knowledge"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# Phase 1 deps only. Phases 3 (search), 4 (git), 5 (auth), 7 (federation),
# 8 (disclosure mode) add more deps as they land. See ARCHITECTURE.md.
[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "process"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "set-header", "compression-br", "compression-gzip"] }
comrak = "0.29"
maud = { version = "0.27", features = ["axum"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["io"] }
# Phase 2 Step 2: tempfile moved from [dev-dependencies] to [dependencies]
# for use in src/edit.rs (atomic write via NamedTempFile::persist).
tempfile = "3"
# Phase 4 Step 4.1: git2 integration for versioned content. libgit2-dev
# system library required at link time (bundled with libssl-dev in PK.3).
git2 = "0.20"
# Phase 4 Step 4.2: gix (read-side) for history and blame.
gix = { version = "0.83", features = ["blame"] }
gix-blame = "0.13"
similar = { version = "2.7", features = ["inline"] }
# Phase 3 Step 3.1: tantivy full-text search backend. On-disk index at
# <state_dir>/search/; rebuilt on startup from a tree walk; incremental
# reindex on edit. ~50 MB writer heap default.
tantivy = "0.24"
# Phase 3 Step 3.3: Atom feed generation (RFC 4287). chrono is a transitive
# dep of atom_syndication; declared directly so DateTime<Utc> is available
# for mtime → FixedDateTime conversions in feeds.rs.
atom_syndication = "0.12"
chrono = "0.4"
# Phase 2 Step 7: real-time collab via yjs (client-side); server is a
# passthrough WebSocket relay (per-slug rooms via tokio::sync::broadcast).
# No yrs/Yjs Rust port needed for the relay; persistence is via the
# existing /edit POST when user clicks save. futures-util pulls in the
# StreamExt::split needed for axum WebSocket sender/receiver split.
futures-util = "0.3"
csv = "1.3"
regex = "1.10"
# Phase 5: auth + edit review. argon2id password hashing; rusqlite (bundled
# SQLite, no system dep) for users/sessions/pending edits; uuid for tokens.
argon2 = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
