[package]
name = "app-mediakit-knowledge"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "PointSav knowledge platform — wiki engine. Single-binary, flat-file Markdown source-of-truth, Git-versioned, AI-optional."
license = "Apache-2.0"
publish = false

[[bin]]
name = "app-mediakit-knowledge"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# Phase 1 deps only. Phases 3 (search), 4 (git), 5 (auth), 7 (federation),
# 8 (disclosure mode) add more deps as they land. See ARCHITECTURE.md.
[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "process", "io-util"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "set-header", "compression-br", "compression-gzip"] }
comrak = "0.52"
maud = { version = "0.27", features = ["axum"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["io"] }
# Phase 2 Step 2: tempfile moved from [dev-dependencies] to [dependencies]
# for use in src/edit.rs (atomic write via NamedTempFile::persist).
tempfile = "3"
# Phase 4 Step 4.1: git2 integration for versioned content. libgit2-dev
# system library required at link time (bundled with libssl-dev in PK.3).
git2 = "0.20"
# Phase 4 Step 4.2: gix (read-side) for history and blame.
gix = { version = "0.83", features = ["blame"] }
gix-blame = "0.13"
similar = { version = "2.7", features = ["inline"] }
# Phase 3 Step 3.1: tantivy full-text search backend. On-disk index at
# <state_dir>/search/; rebuilt on startup from a tree walk; incremental
# reindex on edit. ~50 MB writer heap default.
tantivy = "0.24"
# Phase 3 Step 3.3: Atom feed generation (RFC 4287). chrono is a transitive
# dep of atom_syndication; declared directly so DateTime<Utc> is available
# for mtime → FixedDateTime conversions in feeds.rs.
atom_syndication = "0.12"
chrono = "0.4"
csv = "1.3"
# Phase 0 federation: declarative per-instance `knowledge.toml` mount manifest.
toml = "0.8"
regex = "1.10"
# File-system watcher for incremental Tantivy search reindex.
# The recommended backend on Linux is inotify (default); macos uses kqueue.
notify = "6"
# Phase 4 Steps 4.4+4.5: redb embedded key-value store for the wikilink
# graph and blake3 content hashes. redb stores the link graph on disk at
# <state_dir>/links.redb; blake3 provides the federation-seam baseline.
redb = "4.1"
blake3 = "1.8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

