[package]
name = "app-mediakit-marketing"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Marketing platform engine for the os-mediakit family — server-rendered, agent-first. Composes typed sections (from app-mediakit-shell) into pages; AI authors via MCP, humans approve (F12). Serves home.woodfinegroup.com / home.pointsav.com."
license = "Apache-2.0"
publish = false

[[bin]]
name = "app-mediakit-marketing"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
app-mediakit-shell = { path = "../app-mediakit-shell" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-br", "compression-gzip"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
