[package]
name = "app-mediakit-shell"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Shared chrome chassis for the os-mediakit app family — maud header/footer/page shell, the typed Section component vocabulary, and DTCG token loading. Consumed by app-mediakit-marketing (and, planned, -knowledge / -distributions). Not a binary; not the OS."
license = "Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

# Framework-agnostic by design: this chassis produces HTML (maud Markup /
# String) and parses/validates content manifests. It deliberately does NOT
# depend on axum — the binary that mounts it owns the web framework. That
# keeps the shared vocabulary reusable across every app-mediakit-* surface.
[dependencies]
maud = "0.27"
comrak = "0.52"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
