[package]
name = "app-mediakit-telemetry"
version = "1.0.0"
edition = "2021"
description = "Cookieless Intelligence Loop & Edge Ingestion (TLS Enabled)"

[workspace]

[[bin]]
name = "telemetry-daemon"
path = "src/bin/telemetry-daemon.rs"

[[bin]]
name = "telemetry-synthesizer"
path = "src/bin/telemetry-synthesizer.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
csv = "1.3"
maxminddb = "0.23"
