[package]
name = "app-mediakit-telemetry"
version = "1.2.0"
edition = "2021"
description = "Cookieless Intelligence Loop & Edge Ingestion (TLS Enabled)"

[workspace]

[[bin]]
name = "telemetry-daemon"
path = "src/bin/telemetry-daemon.rs"

[[bin]]
name = "omni-matrix-engine"
path = "src/bin/omni-matrix-engine.rs"

[dependencies]
# Daemon Dependencies (Ingestion Edge)
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3", features = ["tls"] }
serde_json = "1.0"

# Omni-Matrix Dependencies (Synthesis Core)
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
csv = "1.3"
maxminddb = "0.23"
