[package]
name = "app-network-admin"
version = "0.1.0"
edition = "2021"
description = "F8 Terminal Gateway — HTTP command surface (:8085) and mesh broadcast (:8090) for os-network-admin."

[workspace]

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
bytes = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
