[workspace]

[package]
name = "app-orchestration-graph"
version = "0.0.1-stub"
edition = "2021"
license = "LicenseRef-PointSav-Proprietary"
rust-version = "1.85"

[[bin]]
name = "orchestration-graph-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["rt", "macros", "net"] }
axum = "0.8"
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
