[package]
name = "app-orchestration-graph"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app-orchestration-graph"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
