[workspace]
resolver = "2"
members = [
    "crates/orchestration-slm-core",
    "crates/orchestration-slm",
    "crates/orchestration-slm-server",
]

[workspace.package]
edition = "2021"
license = "LicenseRef-PointSav-Proprietary"
rust-version = "1.85"

[workspace.dependencies]
orchestration-slm-core = { path = "crates/orchestration-slm-core" }
orchestration-slm = { path = "crates/orchestration-slm" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers, time
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Errors
anyhow = "1"
thiserror = "2"

# License token verification — Ed25519 signature over a base64 payload.
# This is the commercial gate for the proprietary chassis.
ed25519-dalek = "2"
base64 = "0.22"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
