[package]
name = "app-privategit-bim"
version = "0.1.0"
edition = "2021"
description = "BIM Object schema vault, viewer, editor, and MCP endpoint — Woodfine"
license = "Apache-2.0"

[[bin]]
name = "app-privategit-bim"
path = "src/main.rs"

[dependencies]
axum          = "0.8"
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tower-http    = { version = "0.6", features = ["fs", "cors"] }
pulldown-cmark = "0.12"
zip           = "2"
jsonschema    = "0.20"
notify        = "6"
tokio-stream  = { version = "0.1", features = ["sync"] }
futures-util  = "0.3"
