[package]
name = "app-privategit-marketplace"
version = "0.1.0"
edition = "2021"
description = "PointSav software storefront — browse products, pay in USDC, receive signed binary"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
