[package]
name = "app-privategit-source"
version = "0.1.0"
edition = "2021"
description = "PointSav PrivateGit Source — signed binary release server and smart-HTTP Git backend"

[[bin]]
name = "app-privategit-source"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
ed25519-dalek = "2"
base64 = "0.22"
hex = "0.4"
chrono = "0.4"
