[package]
name = "app-privategit-workbench"
version = "0.0.1"
edition = "2021"
description = "Browser-based developer workbench for Totebox Orchestration — file tree, viewer, and editor."
license = "Apache-2.0"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tower-http = { version = "0.6", features = ["cors"] }
notify = "6"
tokio-stream = { version = "0.1", features = ["sync"] }
moonshot-docengine = { path = "../moonshot-docengine" }
