[workspace]

[package]
name = "app-workplace-http-prototype"
version = "0.1.0"
edition = "2021"
description = "HTTP prototype surface for os-workplace — all 8 Workplace surfaces accessible over WireGuard PPN while native Tauri builds await a macOS host."
license = "Apache-2.0"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rust-embed = { version = "8", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
mime_guess = "2"
notify = "6"
tokio-stream = { version = "0.1", features = ["sync"] }
