[package]
name = "moonshot-toolkit"
version = "0.1.3"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }

[lib]
name = "moonshot_toolkit"
path = "src/lib.rs"

[[bin]]
name = "moonshot-toolkit"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
