[package]
name = "moonshot-toolkit"
version = "0.3.0"
edition = "2021"
rust-version = "1.74"
description = "seL4 Microkit system-spec compiler and build-plan generator for Capability Ledger Substrate deployments."
license = "AGPL-3.0-or-later"
repository = "https://github.com/pointsav/pointsav-monorepo"
keywords = ["sel4", "microkit", "embedded", "substrate", "build-tool"]
categories = ["development-tools", "embedded"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }

[lib]
name = "moonshot_toolkit"
path = "src/lib.rs"

[[bin]]
name = "moonshot-toolkit"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
