[package]
name = "os-console"
version = "0.1.0"
edition = "2021"
description = "os-console — keyboard-native terminal interface for the Totebox Archive"

[[bin]]
name = "os-console"
path = "src/main.rs"

[features]
ssh-server = ["dep:rand", "dep:ratatui"]

[dependencies]
app-console-keys = { path = "../app-console-keys" }
app-console-content = { path = "../app-console-content" }
app-console-input = { path = "../app-console-input" }
app-console-system = { path = "../app-console-system" }
system-gateway-mba = { path = "../system-gateway-mba" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
russh = { version = "0.60" }
rand = { version = "0.10", optional = true }
ratatui = { version = "0.29", optional = true }
